Deployment _yml/go-service.yaml
apiVersion: v1
kind: Service
metadata:
 
spec:
  ports:
    - name: "9090"
      port: 9090
      targetPort: 8080
  selector:
    io.kompose.service: go
status:
  loadBalancer: {}
